# finpy

./: .gitignore  Readme.md  pyproject.toml
finpy/: __init__.py  cli.py  db.py  utils.py
finpy/cli/: commands.py  parser.py
