[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "finpy"
version = "0.2.1"
description = "Personal finance CLI tool"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name="Sai Vara Prasad Kotha" }
]

dependencies = [
  "rich",
  "termcharts"
]


[project.scripts]
finpy = "finpy.cli:main"
